[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "audioop-lts>=0.2.2",
    "matplotlib>=3.10.8",
    "mysql-connector-python>=9.1.0",
    "numpy>=2.4.2",
    "psycopg2-binary>=2.9.10",
    "pyaudio>=0.2.14",
    "pydub>=0.23.1",
    "scipy>=1.17.1",
]
